--- a/index.html
+++ b/index.html
@@ -61,6 +61,34 @@
             <p class="masthead-subheading font-weight-light mb-0">Java/Kotlin - Senior Backend & SRE Engineer - AWS/Microsoft</p>
         </div>
     </div>
+    <div class="cv-scroll-hint">
+        <span>S</span>
+        <span>c</span>
+        <span>r</span>
+        <span>o</span>
+        <span>l</span>
+        <span>l</span>
+        <span class="space"></span>
+        <span>d</span>
+        <span>o</span>
+        <span>w</span>
+        <span>n</span>
+        <span class="space"></span>
+        <span>t</span>
+        <span>o</span>
+        <span class="space"></span>
+        <span>f</span>
+        <span>i</span>
+        <span>n</span>
+        <span>d</span>
+        <span class="space"></span>
+        <span>m</span>
+        <span>y</span>
+        <span class="space"></span>
+        <span>C</span>
+        <span>V</span>
+    </div>
+
 </header>
 
 <!-- About Section-->
